# CS-744-Design-and-Engineering-of-Computing-Systems

./: README.md
Assignment 1/: Makefile  README  myshell.c
Assignment 3/: CMakeLists.txt  Makefile  README  mdriver
Assignment 3/193059003-193050088-malloc/: mm.c
assignment 2 (Doesn't Work)/: Makefile  README  cs744_thread.h  metro  metro.c  metro_runner.c  reaction  reaction.c
